# parca-k8s-operator

./: .gitignore  .jujuignore  CONTRIBUTING.md  Makefile  NGINX-MIGRATION-GUIDE.md  README.md  SECURITY.md  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml  renovate-config.js  renovate.json
.github/workflows/: build-and-test.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  renovate.yaml  tiobe-scan.yaml  update-deps.yaml  update-libs.yaml  update-parca.yaml
lib/charms/parca/v0/: parca_config.py  parca_scrape.py  parca_store.py
lib/charms/parca_k8s/v0/: parca_config.py  parca_scrape.py  parca_store.py
scripts/: minio_ssh_enable.sh
src/: charm.py  ingress_configuration.py  models.py  nginx.py  nginx_prometheus_exporter.py  parca.py  s3_interface.py  tls_config.py
src/grafana_dashboards/: parca.json
src/sli_templates/: sli.yaml
src/slos/: sloth_objectives_template.yaml
tests/integration/: conftest.py  helpers.py  ingress.feature  list_endpoints.feature  parca_ui.feature  profiling.feature  test_charm.py  test_core_cos_integrations.py  test_grafana_integrations.py  test_ingress_integration.py  test_ingress_traefik.py  test_logging.py  test_loki_integration.py  test_metrics_integration.py  test_profiling_integration.py  test_profiling_integrations.py  test_s3.py  test_s3_integration.py  test_service_mesh_integration.py  test_tls.py  test_tls_scraping.py  test_tracing_integrations.py  test_upgrade.py
tests/unit/: conftest.py  test_charm.py  test_parca.py  test_parca_ingress.py  test_parca_nginx.py  test_tls.py
tests/unit/test_business/: test_parca.py
tests/unit/test_charm/: conftest.py  container_utils.py  test_charm.py  test_ingress_config.py  test_istio_ingress.py  test_scrape_config.py  test_service_mesh.py  test_slos.py  test_tls.py
tests/unit/test_workload/: test_nginx_config.py  test_parca.py  test_parca_commandline.py  test_s3_interface.py
