# Testing tools configuration
[project]
name = "parca-k8s-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops",
    "pydantic <3",
    "cosl>=0.1.0",
    # ---PYDEPS---
    # lib/charms/tempo_coordinator_k8s/v0/charm_tracing.py
    "opentelemetry-exporter-otlp-proto-http==1.34.0",
    # lib/charms/tls_certificates_interface/v4/tls_certificates.py
    "cryptography",
]

[project.optional-dependencies]
dev = [
    # ---UNIT TESTS---
    "coverage[toml]",
    "pytest",
    "ops[testing]",
    # ---INTEGRATION TESTS---
    "pydantic",
    "jubilant",
    "pytest-jubilant",
    "tenacity",
    "minio",
    "requests",
    # ---LINTING---
    "ruff",
    "pyright",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
log_cli_level = "INFO"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
markers = [
    "setup: marks certain integration tests as setup tests (deselect with '-m \"not setup\"')",
    "teardown: marks certain integration tests as teardown tests",
]


# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10
