# Testing tools configuration
[project]
name = "parca-k8s-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops[tracing]",
    "pydantic <3",
    # parca is not a coordinated-worker, but that's where the nginx config builder we need lives
    "coordinated_workers",
    # ---PYDEPS---
    # lib/charms/tls_certificates_interface/v4/tls_certificates.py
    "cryptography",
]

[project.optional-dependencies]
dev = [
    # ---UNIT TESTS---
    "coverage[toml]",
    "pytest",
    "pytest-bdd",
    "ops[testing]",
    # ---INTEGRATION TESTS---
    "pydantic",
    "jubilant",
    "pytest-jubilant",
    "tenacity",
    "minio",
    "requests",
    # ---LINTING---
    "ruff",
    "pyright",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
markers = [
    # TODO: this should be eventually managed by a pytest plugin
    "verifies: marks tests as verifying specific features",
]


# Linting tools configuration
[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
ignore = ["E501", "D107"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104"] }

[tool.ruff.lint.mccabe]
max-complexity = 10
